modified:   HTML/Work2Variant/blogs.html 	modified:   HTML/Work2Variant/catalog.html 	modified:   HTML/Work2Variant/index.html 	modified:   HTML/Work2Variant/info.html 	modified:   HTML/Work2Variant/styles/blogsStyle.css 	modified:   HTML/Work2Variant/styles/catalogStyle.css 	modified:   HTML/Work2Variant/styles/indexStyle.css 	modified:   HTML/Work2Variant/styles/infoStyle.css 	modified:   HTML/Work2Variant/styles/mainStyles.css

--- a/HTML/Work2Variant/blogs.html
+++ b/HTML/Work2Variant/blogs.html
@@ -21,59 +21,271 @@
 					<div class="searchbutton"></div>
 				</div>
 			</div>
-			<div class="cart"></div>
-			<div class="like"></div>
+			<div class="cart">
+				<svg
+					width="100%"
+					height="100%"
+					viewBox="0 0 24 24"
+					fill="none"
+					xmlns="http://www.w3.org/2000/svg"
+				>
+					<path
+						d="M4.41291 10.6086C3.69007 10.1267 4.03122 9 4.89995 9H19.1C19.9688 9 20.3099 10.1267 19.5871 10.6086C19.2103 10.8598 18.9452 11.2468 18.8469 11.6888L17.6961 16.8677C17.3624 18.3694 17.1955 19.1202 16.6471 19.5601C16.0987 20 15.3296 20 13.7913 20H10.2087C8.67043 20 7.9013 20 7.35289 19.5601C6.80448 19.1202 6.63763 18.3694 6.30394 16.8677L5.15307 11.6888C5.05484 11.2468 4.78966 10.8598 4.41291 10.6086Z"
+						fill="#7E869E"
+						fill-opacity="0.25"
+					/>
+					<path d="M12 7L12 5" stroke="#222222" stroke-linecap="round" />
+					<path
+						d="M15 16.5L15.5 13.5"
+						stroke="#222222"
+						stroke-linecap="round"
+					/>
+					<path d="M12 16.5L12 13.5" stroke="#222222" stroke-linecap="round" />
+					<path d="M9 16.5L8.5 13.5" stroke="#222222" stroke-linecap="round" />
+				</svg>
+			</div>
+			<div class="like">
+				<svg
+					width="100%"
+					height="100%"
+					viewBox="0 0 24 24"
+					fill="none"
+					xmlns="http://www.w3.org/2000/svg"
+				>
+					<path
+						d="M4.45067 13.9082L11.4033 20.4395C11.6428 20.6644 11.7625 20.7769 11.9037 20.8046C11.9673 20.8171 12.0327 20.8171 12.0963 20.8046C12.2375 20.7769 12.3572 20.6644 12.5967 20.4395L19.5493 13.9082C21.5055 12.0706 21.743 9.0466 20.0978 6.92607L19.7885 6.52734C17.8203 3.99058 13.8696 4.41601 12.4867 7.31365C12.2913 7.72296 11.7087 7.72296 11.5133 7.31365C10.1304 4.41601 6.17972 3.99058 4.21154 6.52735L3.90219 6.92607C2.25695 9.0466 2.4945 12.0706 4.45067 13.9082Z"
+						fill="#7E869E"
+						fill-opacity="0.25"
+						stroke="#222222"
+					/>
+				</svg>
+			</div>
 			<a href="account.html" class="login"> Войти </a>
 		</div>
 		<div class="main">
 			<div class="container">
 				<div class="mainBlog">
-					<div class="mainBlog-img">Изображение</div>
-					<div class="mainBlog-text">Текст</div>
+					<div class="mainBlog-img">
+						<img
+							height="100%"
+							src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnsi66e7LEVyHjbqCrz3Y2T6BbJHdnB2OIah3aocvF6g&s"
+						/>
+					</div>
+					<div class="mainBlog-text">
+						<p style="padding: 2.5%">
+							С 4 по 7 апреля в Далласе проходил 16-й выпуск арт-ярмарки Dallas
+							Art Fair. В смотре принимали участие более 90 галерей со всего
+							мира. Размах ярмарки почти вернулся к допрандемийным показателям,
+							когда в ней ежегодно участвовало около 100 дилеров.
+						</p>
+					</div>
 					<div class="mainBlog-buttons">
-						<div class="likeBut"></div>
-						<div class="forwardBut"></div>
-						<div class="commentArea">Область коммента</div>
-						<div class="readMoreBut"></div>
+						<div class="likeBut">
+							<svg
+								width="100%"
+								height="100%"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M4.45067 13.9082L11.4033 20.4395C11.6428 20.6644 11.7625 20.7769 11.9037 20.8046C11.9673 20.8171 12.0327 20.8171 12.0963 20.8046C12.2375 20.7769 12.3572 20.6644 12.5967 20.4395L19.5493 13.9082C21.5055 12.0706 21.743 9.0466 20.0978 6.92607L19.7885 6.52734C17.8203 3.99058 13.8696 4.41601 12.4867 7.31365C12.2913 7.72296 11.7087 7.72296 11.5133 7.31365C10.1304 4.41601 6.17972 3.99058 4.21154 6.52735L3.90219 6.92607C2.25695 9.0466 2.4945 12.0706 4.45067 13.9082Z"
+									stroke="#222222"
+								/>
+							</svg>
+						</div>
+						<div class="forwardBut">
+							<svg
+								width="100%"
+								height="100%"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path d="M12 12L16 16L12 20" stroke="#222222" />
+								<path d="M13 8L17 8" stroke="#222222" stroke-linecap="round" />
+								<path
+									d="M16 16H8C5.79086 16 4 14.2091 4 12V12C4 9.79086 5.79086 8 8 8H9"
+									stroke="#222222"
+									stroke-linecap="round"
+								/>
+							</svg>
+						</div>
+						<div class="commentArea"></div>
+						<div class="readMoreBut">
+							<svg
+								width="100%"
+								height="100%"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M5 17H9C10.6569 17 12 18.3431 12 20V10C12 7.17157 12 5.75736 11.1213 4.87868C10.2426 4 8.82843 4 6 4H5C4.05719 4 3.58579 4 3.29289 4.29289C3 4.58579 3 5.05719 3 6V15C3 15.9428 3 16.4142 3.29289 16.7071C3.58579 17 4.05719 17 5 17Z"
+									stroke="#33363F"
+									stroke-width="2"
+								/>
+								<path
+									d="M19 17H15C13.3431 17 12 18.3431 12 20V10C12 7.17157 12 5.75736 12.8787 4.87868C13.7574 4 15.1716 4 18 4H19C19.9428 4 20.4142 4 20.7071 4.29289C21 4.58579 21 5.05719 21 6V15C21 15.9428 21 16.4142 20.7071 16.7071C20.4142 17 19.9428 17 19 17Z"
+									stroke="#33363F"
+									stroke-width="2"
+								/>
+							</svg>
+						</div>
 					</div>
 				</div>
 				<div class="column-newBlog">
 					<div class="newBlog">
-						<div class="newBlog-img"></div>
-						<div class="newBlog-text">Текст</div>
+						<div class="newBlog-img">
+							<img
+								height="100%"
+								src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnsi66e7LEVyHjbqCrz3Y2T6BbJHdnB2OIah3aocvF6g&s"
+							/>
+						</div>
+						<div class="newBlog-text">
+							<p style="padding: 1.5%">
+								Опубликованные на днях результаты опроса, проведенного
+								экспертами ярмарки Art Russia и корпорации «Синергия»,
+								свидетельствуют о том, что около 20 % опрошенных посетителей
+								ярмарки готовы тратить на искусство свыше полумиллиона рублей.
+							</p>
+						</div>
 						<div class="newBlog-buttons">
-							<div class="newLikeBut"></div>
-							<div class="newForwardBut"></div>
+							<div class="newLikeBut">
+								<svg
+									width="100%"
+									height="100%"
+									viewBox="0 0 24 24"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										d="M4.45067 13.9082L11.4033 20.4395C11.6428 20.6644 11.7625 20.7769 11.9037 20.8046C11.9673 20.8171 12.0327 20.8171 12.0963 20.8046C12.2375 20.7769 12.3572 20.6644 12.5967 20.4395L19.5493 13.9082C21.5055 12.0706 21.743 9.0466 20.0978 6.92607L19.7885 6.52734C17.8203 3.99058 13.8696 4.41601 12.4867 7.31365C12.2913 7.72296 11.7087 7.72296 11.5133 7.31365C10.1304 4.41601 6.17972 3.99058 4.21154 6.52735L3.90219 6.92607C2.25695 9.0466 2.4945 12.0706 4.45067 13.9082Z"
+										stroke="#222222"
+									/>
+								</svg>
+							</div>
+							<div class="newForwardBut">
+								<svg
+									width="100%"
+									height="100%"
+									viewBox="0 0 24 24"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path d="M12 12L16 16L12 20" stroke="#222222" />
+									<path
+										d="M13 8L17 8"
+										stroke="#222222"
+										stroke-linecap="round"
+									/>
+									<path
+										d="M16 16H8C5.79086 16 4 14.2091 4 12V12C4 9.79086 5.79086 8 8 8H9"
+										stroke="#222222"
+										stroke-linecap="round"
+									/>
+								</svg>
+							</div>
 							<div class="newCommentArea"></div>
-							<div class="newReadMoreBut"></div>
+							<div class="newReadMoreBut">
+								<svg
+									width="100%"
+									height="100%"
+									viewBox="0 0 24 24"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										d="M5 17H9C10.6569 17 12 18.3431 12 20V10C12 7.17157 12 5.75736 11.1213 4.87868C10.2426 4 8.82843 4 6 4H5C4.05719 4 3.58579 4 3.29289 4.29289C3 4.58579 3 5.05719 3 6V15C3 15.9428 3 16.4142 3.29289 16.7071C3.58579 17 4.05719 17 5 17Z"
+										stroke="#33363F"
+										stroke-width="2"
+									/>
+									<path
+										d="M19 17H15C13.3431 17 12 18.3431 12 20V10C12 7.17157 12 5.75736 12.8787 4.87868C13.7574 4 15.1716 4 18 4H19C19.9428 4 20.4142 4 20.7071 4.29289C21 4.58579 21 5.05719 21 6V15C21 15.9428 21 16.4142 20.7071 16.7071C20.4142 17 19.9428 17 19 17Z"
+										stroke="#33363F"
+										stroke-width="2"
+									/>
+								</svg>
+							</div>
 						</div>
 					</div>
 					<div class="newBlog">
-						<div class="newBlog-img"></div>
-						<div class="newBlog-text">Текст</div>
+						<div class="newBlog-img">
+							<img
+								height="100%"
+								src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnsi66e7LEVyHjbqCrz3Y2T6BbJHdnB2OIah3aocvF6g&s"
+							/>
+						</div>
+						<div class="newBlog-text">
+							<p style="padding: 1.5%">
+								Запущенный в прошлом году сайт Digital Basel, на котором
+								выставлялись NFT-версии работ галерей-участников ярмарки Art
+								Basel, объявил о закрытии. На этой неделе руководители проекта
+								распространили официальное письмо, в котором они объясняют свое
+								решение проблемами, непрерывно продолжавшимися с первых дней
+								работы сайта.
+							</p>
+						</div>
 						<div class="newBlog-buttons">
-							<div class="newLikeBut"></div>
-							<div class="newForwardBut"></div>
+							<div class="newLikeBut">
+								<svg
+									width="100%"
+									height="100%"
+									viewBox="0 0 24 24"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										d="M4.45067 13.9082L11.4033 20.4395C11.6428 20.6644 11.7625 20.7769 11.9037 20.8046C11.9673 20.8171 12.0327 20.8171 12.0963 20.8046C12.2375 20.7769 12.3572 20.6644 12.5967 20.4395L19.5493 13.9082C21.5055 12.0706 21.743 9.0466 20.0978 6.92607L19.7885 6.52734C17.8203 3.99058 13.8696 4.41601 12.4867 7.31365C12.2913 7.72296 11.7087 7.72296 11.5133 7.31365C10.1304 4.41601 6.17972 3.99058 4.21154 6.52735L3.90219 6.92607C2.25695 9.0466 2.4945 12.0706 4.45067 13.9082Z"
+										stroke="#222222"
+									/>
+								</svg>
+							</div>
+							<div class="newForwardBut">
+								<svg
+									width="100%"
+									height="100%"
+									viewBox="0 0 24 24"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path d="M12 12L16 16L12 20" stroke="#222222" />
+									<path
+										d="M13 8L17 8"
+										stroke="#222222"
+										stroke-linecap="round"
+									/>
+									<path
+										d="M16 16H8C5.79086 16 4 14.2091 4 12V12C4 9.79086 5.79086 8 8 8H9"
+										stroke="#222222"
+										stroke-linecap="round"
+									/>
+								</svg>
+							</div>
 							<div class="newCommentArea"></div>
-							<div class="newReadMoreBut"></div>
+							<div class="newReadMoreBut">
+								<svg
+									width="100%"
+									height="100%"
+									viewBox="0 0 24 24"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										d="M5 17H9C10.6569 17 12 18.3431 12 20V10C12 7.17157 12 5.75736 11.1213 4.87868C10.2426 4 8.82843 4 6 4H5C4.05719 4 3.58579 4 3.29289 4.29289C3 4.58579 3 5.05719 3 6V15C3 15.9428 3 16.4142 3.29289 16.7071C3.58579 17 4.05719 17 5 17Z"
+										stroke="#33363F"
+										stroke-width="2"
+									/>
+									<path
+										d="M19 17H15C13.3431 17 12 18.3431 12 20V10C12 7.17157 12 5.75736 12.8787 4.87868C13.7574 4 15.1716 4 18 4H19C19.9428 4 20.4142 4 20.7071 4.29289C21 4.58579 21 5.05719 21 6V15C21 15.9428 21 16.4142 20.7071 16.7071C20.4142 17 19.9428 17 19 17Z"
+										stroke="#33363F"
+										stroke-width="2"
+									/>
+								</svg>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-		<div class="footer">
-			<div class="nameCO">
-				<div class="name">Наименование</div>
-				<div class="info">Описание</div>
-			</div>
-			<div class="navFooter">
-				<div class="navbutton">Каталог</div>
-				<div class="navbutton">Блоги</div>
-				<div class="navbutton">О нас</div>
-			</div>
-			<div class="contacts">
-				<div class="contact">Контакты</div>
-				<div class="map">Карта</div>
 			</div>
 		</div>
 	</body>
