--- a/HTML/Work2Variant/index.html
+++ b/HTML/Work2Variant/index.html
@@ -20,54 +20,272 @@
 					<a href="blogs.html" class="navbutton"> Блоги </a>
 					<a href="info.html" class="navbutton"> О нас </a>
 				</div>
-				<div class="search"><p class = searchtext>поиск...</p><div class = searchbutton></div></div>
+				<div class="search">
+					<p class="searchtext">поиск...</p>
+					<div class="searchbutton"></div>
+				</div>
 			</div>
-			<div class="cart"></div>
-			<div class="like"></div>
+			<div class="cart">
+				<svg
+					width="100%"
+					height="100%"
+					viewBox="0 0 24 24"
+					fill="none"
+					xmlns="http://www.w3.org/2000/svg"
+				>
+					<path
+						d="M4.41291 10.6086C3.69007 10.1267 4.03122 9 4.89995 9H19.1C19.9688 9 20.3099 10.1267 19.5871 10.6086C19.2103 10.8598 18.9452 11.2468 18.8469 11.6888L17.6961 16.8677C17.3624 18.3694 17.1955 19.1202 16.6471 19.5601C16.0987 20 15.3296 20 13.7913 20H10.2087C8.67043 20 7.9013 20 7.35289 19.5601C6.80448 19.1202 6.63763 18.3694 6.30394 16.8677L5.15307 11.6888C5.05484 11.2468 4.78966 10.8598 4.41291 10.6086Z"
+						fill="#7E869E"
+						fill-opacity="0.25"
+					/>
+					<path d="M12 7L12 5" stroke="#222222" stroke-linecap="round" />
+					<path
+						d="M15 16.5L15.5 13.5"
+						stroke="#222222"
+						stroke-linecap="round"
+					/>
+					<path d="M12 16.5L12 13.5" stroke="#222222" stroke-linecap="round" />
+					<path d="M9 16.5L8.5 13.5" stroke="#222222" stroke-linecap="round" />
+				</svg>
+			</div>
+			<div class="like">
+				<svg
+					width="100%"
+					height="100%"
+					viewBox="0 0 24 24"
+					fill="none"
+					xmlns="http://www.w3.org/2000/svg"
+				>
+					<path
+						d="M4.45067 13.9082L11.4033 20.4395C11.6428 20.6644 11.7625 20.7769 11.9037 20.8046C11.9673 20.8171 12.0327 20.8171 12.0963 20.8046C12.2375 20.7769 12.3572 20.6644 12.5967 20.4395L19.5493 13.9082C21.5055 12.0706 21.743 9.0466 20.0978 6.92607L19.7885 6.52734C17.8203 3.99058 13.8696 4.41601 12.4867 7.31365C12.2913 7.72296 11.7087 7.72296 11.5133 7.31365C10.1304 4.41601 6.17972 3.99058 4.21154 6.52735L3.90219 6.92607C2.25695 9.0466 2.4945 12.0706 4.45067 13.9082Z"
+						fill="#7E869E"
+						fill-opacity="0.25"
+						stroke="#222222"
+					/>
+				</svg>
+			</div>
 			<a href="account.html" class="login"> Войти </a>
 		</div>
 		<div class="main">
 			<div class="mainName">
 				<div class="nameCompany">
-				<p id = nameCompany1>Мир возможностей</p>
-				<p id = nameCompany2>Перемещаясь по сложной ткани жизни, выборы раскрывают пути к необычному, требуя творчества, любопытства и смелости для настоящего насыщенного путешествия.</p></div>
-				<img width="100%" height="100%" src="" alt="" class="nameIMG" />
-			</div>
-			<div class = "slider">				
-				<p id = swiperText1>Новые поступления</p>
-				<p id = swiperText2>Перемещаясь по сложной ткани жизни, выборы раскрывают пути к необычному, требуя творчества, любопытства и смелости для настоящего насыщенного путешествия.</p>
-			<div class="swiper">
-				<div class="swiper-wrapper">
-					<div class="swiper-slide">slide1</div>
-					<div class="swiper-slide">slide2</div>
-					<div class="swiper-slide">slide3</div>
-					<div class="swiper-slide">slide4</div>
+					<p id="nameCompany1">Мир возможностей</p>
+					<p id="nameCompany2">
+						Перемещаясь по сложной ткани жизни, выборы раскрывают пути к
+						необычному, требуя творчества, любопытства и смелости для настоящего
+						насыщенного путешествия.
+					</p>
 				</div>
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
+				<img
+					width="100%"
+					height="100%"
+					src="https://img.freepik.com/free-photo/beautiful-grayscale-shot-of-a-desert_181624-2287.jpg"
+					alt=""
+					class="nameIMG"
+				/>
 			</div>
+			<div class="slider">
+				<p id="swiperText1">Новые поступления</p>
+				<p id="swiperText2">
+					Перемещаясь по сложной ткани жизни, выборы раскрывают пути к
+					необычному, требуя творчества, любопытства и смелости для настоящего
+					насыщенного путешествия.
+				</p>
+				<div class="swiper">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<img
+								width="100%"
+								height="100%"
+								src="https://img.freepik.com/free-photo/beautiful-grayscale-shot-of-a-desert_181624-2287.jpg"
+								alt=""
+							/>
+						</div>
+						<div class="swiper-slide">
+							<img
+								width="100%"
+								height="100%"
+								src="https://img.freepik.com/free-photo/beautiful-grayscale-shot-of-a-desert_181624-2287.jpg"
+								alt=""
+							/>
+						</div>
+						<div class="swiper-slide">
+							<img
+								width="100%"
+								height="100%"
+								src="https://img.freepik.com/free-photo/beautiful-grayscale-shot-of-a-desert_181624-2287.jpg"
+								alt=""
+							/>
+						</div>
+						<div class="swiper-slide">
+							<img
+								width="100%"
+								height="100%"
+								src="https://img.freepik.com/free-photo/beautiful-grayscale-shot-of-a-desert_181624-2287.jpg"
+								alt=""
+							/>
+						</div>
+					</div>
+					<div class="swiper-button-prev"></div>
+					<div class="swiper-button-next"></div>
+				</div>
 			</div>
 			<div class="News">
-                <p style="padding-bottom: 1%;">Новости в мире искусства</p>
+				<p style="padding-bottom: 1%">Новости в мире искусства</p>
 				<div class="newInfo">
-					<div class="newtext">Текст новости</div>
+					<div class="newtext">
+						<p style="padding: 0.5%">
+							Портал Artsy посвятил отдельный материал ключевым факторам,
+							которые сегодня влияют на вектор развития азиатского арт-рынка.
+							Первым среди них упоминается бум роста индийского сегмента. С 1 по
+							4 февраля в Дели проходил 15-й выпуск ярмарки India Art Fair.
+							Число участников смотра за год выросло на 100 галерей. В одном из
+							интервью директор ярмарки Джая Асокан заявила, что за последнее
+							десятилетие арт-рынок Индии в целом вырос на 250 %. Эксперты Artsy
+							пишут, что главным «секретом успеха» стало всестороннее
+							сотрудничество всех игроков рынка, от коммерческих галерей до
+							институций и частных коллекционеров.
+						</p>
+					</div>
 					<div class="newbuttons">
-						<div class="likebut"></div>
-						<div class="morebut"></div>
+						<div class="likebut">
+							<svg
+								width="100%"
+								height="100%"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M4.45067 13.9082L11.4033 20.4395C11.6428 20.6644 11.7625 20.7769 11.9037 20.8046C11.9673 20.8171 12.0327 20.8171 12.0963 20.8046C12.2375 20.7769 12.3572 20.6644 12.5967 20.4395L19.5493 13.9082C21.5055 12.0706 21.743 9.0466 20.0978 6.92607L19.7885 6.52734C17.8203 3.99058 13.8696 4.41601 12.4867 7.31365C12.2913 7.72296 11.7087 7.72296 11.5133 7.31365C10.1304 4.41601 6.17972 3.99058 4.21154 6.52735L3.90219 6.92607C2.25695 9.0466 2.4945 12.0706 4.45067 13.9082Z"
+									stroke="#222222"
+								/>
+							</svg>
+						</div>
+						<div class="morebut">
+							<svg
+								width="100%"
+								height="100%"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M5 17H9C10.6569 17 12 18.3431 12 20V10C12 7.17157 12 5.75736 11.1213 4.87868C10.2426 4 8.82843 4 6 4H5C4.05719 4 3.58579 4 3.29289 4.29289C3 4.58579 3 5.05719 3 6V15C3 15.9428 3 16.4142 3.29289 16.7071C3.58579 17 4.05719 17 5 17Z"
+									stroke="#33363F"
+									stroke-width="2"
+								/>
+								<path
+									d="M19 17H15C13.3431 17 12 18.3431 12 20V10C12 7.17157 12 5.75736 12.8787 4.87868C13.7574 4 15.1716 4 18 4H19C19.9428 4 20.4142 4 20.7071 4.29289C21 4.58579 21 5.05719 21 6V15C21 15.9428 21 16.4142 20.7071 16.7071C20.4142 17 19.9428 17 19 17Z"
+									stroke="#33363F"
+									stroke-width="2"
+								/>
+							</svg>
+						</div>
 					</div>
 				</div>
 				<div class="newInfo">
-					<div class="newtext">Текст новости</div>
+					<div class="newtext">
+						<p style="padding: 0.5%">
+							Портал Artsy посвятил отдельный материал ключевым факторам,
+							которые сегодня влияют на вектор развития азиатского арт-рынка.
+							Первым среди них упоминается бум роста индийского сегмента. С 1 по
+							4 февраля в Дели проходил 15-й выпуск ярмарки India Art Fair.
+							Число участников смотра за год выросло на 100 галерей. В одном из
+							интервью директор ярмарки Джая Асокан заявила, что за последнее
+							десятилетие арт-рынок Индии в целом вырос на 250 %. Эксперты Artsy
+							пишут, что главным «секретом успеха» стало всестороннее
+							сотрудничество всех игроков рынка, от коммерческих галерей до
+							институций и частных коллекционеров.
+						</p>
+					</div>
 					<div class="newbuttons">
-						<div class="likebut"></div>
-						<div class="morebut"></div>
+						<div class="likebut">
+							<svg
+								width="100%"
+								height="100%"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M4.45067 13.9082L11.4033 20.4395C11.6428 20.6644 11.7625 20.7769 11.9037 20.8046C11.9673 20.8171 12.0327 20.8171 12.0963 20.8046C12.2375 20.7769 12.3572 20.6644 12.5967 20.4395L19.5493 13.9082C21.5055 12.0706 21.743 9.0466 20.0978 6.92607L19.7885 6.52734C17.8203 3.99058 13.8696 4.41601 12.4867 7.31365C12.2913 7.72296 11.7087 7.72296 11.5133 7.31365C10.1304 4.41601 6.17972 3.99058 4.21154 6.52735L3.90219 6.92607C2.25695 9.0466 2.4945 12.0706 4.45067 13.9082Z"
+									stroke="#222222"
+								/>
+							</svg>
+						</div>
+						<div class="morebut">
+							<svg
+								width="100%"
+								height="100%"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M5 17H9C10.6569 17 12 18.3431 12 20V10C12 7.17157 12 5.75736 11.1213 4.87868C10.2426 4 8.82843 4 6 4H5C4.05719 4 3.58579 4 3.29289 4.29289C3 4.58579 3 5.05719 3 6V15C3 15.9428 3 16.4142 3.29289 16.7071C3.58579 17 4.05719 17 5 17Z"
+									stroke="#33363F"
+									stroke-width="2"
+								/>
+								<path
+									d="M19 17H15C13.3431 17 12 18.3431 12 20V10C12 7.17157 12 5.75736 12.8787 4.87868C13.7574 4 15.1716 4 18 4H19C19.9428 4 20.4142 4 20.7071 4.29289C21 4.58579 21 5.05719 21 6V15C21 15.9428 21 16.4142 20.7071 16.7071C20.4142 17 19.9428 17 19 17Z"
+									stroke="#33363F"
+									stroke-width="2"
+								/>
+							</svg>
+						</div>
 					</div>
 				</div>
 				<div class="newInfo">
-					<div class="newtext">Текст новости</div>
+					<div class="newtext">
+						<p style="padding: 0.5%">
+							Портал Artsy посвятил отдельный материал ключевым факторам,
+							которые сегодня влияют на вектор развития азиатского арт-рынка.
+							Первым среди них упоминается бум роста индийского сегмента. С 1 по
+							4 февраля в Дели проходил 15-й выпуск ярмарки India Art Fair.
+							Число участников смотра за год выросло на 100 галерей. В одном из
+							интервью директор ярмарки Джая Асокан заявила, что за последнее
+							десятилетие арт-рынок Индии в целом вырос на 250 %. Эксперты Artsy
+							пишут, что главным «секретом успеха» стало всестороннее
+							сотрудничество всех игроков рынка, от коммерческих галерей до
+							институций и частных коллекционеров.
+						</p>
+					</div>
 					<div class="newbuttons">
-						<div class="likebut"></div>
-						<div class="morebut"></div>
+						<div class="likebut">
+							<svg
+								width="100%"
+								height="100%"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M4.45067 13.9082L11.4033 20.4395C11.6428 20.6644 11.7625 20.7769 11.9037 20.8046C11.9673 20.8171 12.0327 20.8171 12.0963 20.8046C12.2375 20.7769 12.3572 20.6644 12.5967 20.4395L19.5493 13.9082C21.5055 12.0706 21.743 9.0466 20.0978 6.92607L19.7885 6.52734C17.8203 3.99058 13.8696 4.41601 12.4867 7.31365C12.2913 7.72296 11.7087 7.72296 11.5133 7.31365C10.1304 4.41601 6.17972 3.99058 4.21154 6.52735L3.90219 6.92607C2.25695 9.0466 2.4945 12.0706 4.45067 13.9082Z"
+									stroke="#222222"
+								/>
+							</svg>
+						</div>
+						<div class="morebut">
+							<svg
+								width="100%"
+								height="100%"
+								viewBox="0 0 24 24"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M5 17H9C10.6569 17 12 18.3431 12 20V10C12 7.17157 12 5.75736 11.1213 4.87868C10.2426 4 8.82843 4 6 4H5C4.05719 4 3.58579 4 3.29289 4.29289C3 4.58579 3 5.05719 3 6V15C3 15.9428 3 16.4142 3.29289 16.7071C3.58579 17 4.05719 17 5 17Z"
+									stroke="#33363F"
+									stroke-width="2"
+								/>
+								<path
+									d="M19 17H15C13.3431 17 12 18.3431 12 20V10C12 7.17157 12 5.75736 12.8787 4.87868C13.7574 4 15.1716 4 18 4H19C19.9428 4 20.4142 4 20.7071 4.29289C21 4.58579 21 5.05719 21 6V15C21 15.9428 21 16.4142 20.7071 16.7071C20.4142 17 19.9428 17 19 17Z"
+									stroke="#33363F"
+									stroke-width="2"
+								/>
+							</svg>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -75,17 +293,27 @@
 				<div class="relate" id="rel1">
 					<div class="rateR">Баллы</div>
 					<div class="nicknameR">Ник</div>
-					<div class="textR">Интернет-магазин предоставил широкий выбор художественных материалов с отличным качеством и быстрой доставкой. Очень доволен!</div>
+					<div class="textR">
+						Интернет-магазин предоставил широкий выбор художественных материалов
+						с отличным качеством и быстрой доставкой. Очень доволен!
+					</div>
 				</div>
 				<div class="relate" id="rel2">
 					<div class="rateR">Баллы</div>
 					<div class="nicknameR">Ник</div>
-					<div class="textR">Удобный сайт, простая навигация и множество вариантов оплаты. Находил всё необходимое для своего творчества без лишних усилий. Спасибо за качественное обслуживание!</div>
+					<div class="textR">
+						Удобный сайт, простая навигация и множество вариантов оплаты.
+						Находил всё необходимое для своего творчества без лишних усилий.
+						Спасибо за качественное обслуживание!
+					</div>
 				</div>
 				<div class="relate" id="rel3">
 					<div class="rateR">Баллы</div>
 					<div class="nicknameR">Ник</div>
-					<div class="textR">Отличный сервис и оперативная поддержка клиентов. Заказывал кисти и краски - всё пришло в целости и сохранности. Рекомендую!</div>
+					<div class="textR">
+						Отличный сервис и оперативная поддержка клиентов. Заказывал кисти и
+						краски - всё пришло в целости и сохранности. Рекомендую!
+					</div>
 				</div>
 			</div>
 		</div>
