--- a/HTML/Work2Variant/info.html
+++ b/HTML/Work2Variant/info.html
@@ -21,8 +21,45 @@
 					<div class="searchbutton"></div>
 				</div>
 			</div>
-			<div class="cart"></div>
-			<div class="like"></div>
+			<div class="cart">
+				<svg
+					width="100%"
+					height="100%"
+					viewBox="0 0 24 24"
+					fill="none"
+					xmlns="http://www.w3.org/2000/svg"
+				>
+					<path
+						d="M4.41291 10.6086C3.69007 10.1267 4.03122 9 4.89995 9H19.1C19.9688 9 20.3099 10.1267 19.5871 10.6086C19.2103 10.8598 18.9452 11.2468 18.8469 11.6888L17.6961 16.8677C17.3624 18.3694 17.1955 19.1202 16.6471 19.5601C16.0987 20 15.3296 20 13.7913 20H10.2087C8.67043 20 7.9013 20 7.35289 19.5601C6.80448 19.1202 6.63763 18.3694 6.30394 16.8677L5.15307 11.6888C5.05484 11.2468 4.78966 10.8598 4.41291 10.6086Z"
+						fill="#7E869E"
+						fill-opacity="0.25"
+					/>
+					<path d="M12 7L12 5" stroke="#222222" stroke-linecap="round" />
+					<path
+						d="M15 16.5L15.5 13.5"
+						stroke="#222222"
+						stroke-linecap="round"
+					/>
+					<path d="M12 16.5L12 13.5" stroke="#222222" stroke-linecap="round" />
+					<path d="M9 16.5L8.5 13.5" stroke="#222222" stroke-linecap="round" />
+				</svg>
+			</div>
+			<div class="like">
+				<svg
+					width="100%"
+					height="100%"
+					viewBox="0 0 24 24"
+					fill="none"
+					xmlns="http://www.w3.org/2000/svg"
+				>
+					<path
+						d="M4.45067 13.9082L11.4033 20.4395C11.6428 20.6644 11.7625 20.7769 11.9037 20.8046C11.9673 20.8171 12.0327 20.8171 12.0963 20.8046C12.2375 20.7769 12.3572 20.6644 12.5967 20.4395L19.5493 13.9082C21.5055 12.0706 21.743 9.0466 20.0978 6.92607L19.7885 6.52734C17.8203 3.99058 13.8696 4.41601 12.4867 7.31365C12.2913 7.72296 11.7087 7.72296 11.5133 7.31365C10.1304 4.41601 6.17972 3.99058 4.21154 6.52735L3.90219 6.92607C2.25695 9.0466 2.4945 12.0706 4.45067 13.9082Z"
+						fill="#7E869E"
+						fill-opacity="0.25"
+						stroke="#222222"
+					/>
+				</svg>
+			</div>
 			<a href="account.html" class="login"> Войти </a>
 		</div>
 		<div class="main">
@@ -30,9 +67,25 @@
 				<div class="row-name_map">
 					<div class="nameCompany">
 						<div id="nameCompany-text1">Мир возможностей</div>
-						<div id="nameCompany-text2">Перемещаясь по сложной ткани жизни, выборы раскрывают пути к необычному, требуя творчества, любопытства и смелости для настоящего насыщенного путешествия.</div>
+						<div id="nameCompany-text2">
+							Перемещаясь по сложной ткани жизни, выборы раскрывают пути к
+							необычному, требуя творчества, любопытства и смелости для
+							настоящего насыщенного путешествия.
+						</div>
 					</div>
-					<div class="mapCompany"><iframe width="100%" height="100%" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2666564918795!2d48.389450624836265!3d54.35089833960822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x415d3a02350e60f1%3A0x71f41ea55fac4e37!2z0KPQu9GM0Y_QvdC-0LLRgdC60LjQuSDQs9C-0YHRg9C00LDRgNGB0YLQstC10L3QvdGL0Lkg0YLQtdGF0L3QuNGH0LXRgdC60LjQuSDRg9C90LjQstC10YDRgdC40YLQtdGCICjQo9C70JPQotCjKQ!5e0!3m2!1sru!2sru!4v1714127960771!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+					<div class="mapCompany">
+						<iframe
+							width="100%"
+							height="100%"
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2666564918795!2d48.389450624836265!3d54.35089833960822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x415d3a02350e60f1%3A0x71f41ea55fac4e37!2z0KPQu9GM0Y_QvdC-0LLRgdC60LjQuSDQs9C-0YHRg9C00LDRgNGB0YLQstC10L3QvdGL0Lkg0YLQtdGF0L3QuNGH0LXRgdC60LjQuSDRg9C90LjQstC10YDRgdC40YLQtdGCICjQo9C70JPQotCjKQ!5e0!3m2!1sru!2sru!4v1714127960771!5m2!1sru!2sru"
+							width="600"
+							height="450"
+							style="border: 0"
+							allowfullscreen=""
+							loading="lazy"
+							referrerpolicy="no-referrer-when-downgrade"
+						></iframe>
+					</div>
 				</div>
 				<div class="contacts">
 					<div class="all">
@@ -40,10 +93,107 @@
 						<p>Email</p>
 					</div>
 					<div class="socialSites">
-						<div class="soc"></div>
-						<div class="soc"></div>
-						<div class="soc"></div>
-						<div class="soc"></div>
+						<div class="soc">
+							<svg
+								width="100%"
+								height="100%"
+								viewBox="0 0 48 48"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<g clip-path="url(#clip0_17_24)">
+									<path
+										d="M48 24C48 10.7453 37.2547 0 24 0C10.7453 0 0 10.7453 0 24C0 35.255 7.74912 44.6995 18.2026 47.2934V31.3344H13.2538V24H18.2026V20.8397C18.2026 12.671 21.8995 8.8848 29.9194 8.8848C31.44 8.8848 34.0637 9.18336 35.137 9.48096V16.129C34.5706 16.0694 33.5866 16.0397 32.3645 16.0397C28.4294 16.0397 26.9088 17.5306 26.9088 21.4061V24H34.7482L33.4013 31.3344H26.9088V47.8243C38.7926 46.3891 48.001 36.2707 48.001 24H48Z"
+										fill="#0866FF"
+									/>
+									<path
+										d="M33.4003 31.3344L34.7472 24H26.9078V21.4061C26.9078 17.5306 28.4285 16.0397 32.3635 16.0397C33.5856 16.0397 34.5696 16.0694 35.136 16.129V9.48096C34.0627 9.1824 31.439 8.8848 29.9184 8.8848C21.8986 8.8848 18.2016 12.671 18.2016 20.8397V24H13.2528V31.3344H18.2016V47.2934C20.0582 47.7542 22.0003 48 23.999 48C24.983 48 25.9536 47.9395 26.9069 47.8243V31.3344H33.3994H33.4003Z"
+										fill="white"
+									/>
+								</g>
+								<defs>
+									<clipPath id="clip0_17_24">
+										<rect width="48" height="48" fill="white" />
+									</clipPath>
+								</defs>
+							</svg>
+						</div>
+						<div class="soc">
+							<svg
+								width="100%"
+								height="100%"
+								viewBox="0 0 48 48"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M36.6526 3.80782H43.3995L28.6594 20.6548L46 43.5798H32.4225L21.7881 29.6759L9.61989 43.5798H2.86886L18.6349 25.56L2 3.80782H15.9222L25.5348 16.5165L36.6526 3.80782ZM34.2846 39.5414H38.0232L13.8908 7.63408H9.87892L34.2846 39.5414Z"
+									fill="black"
+								/>
+							</svg>
+						</div>
+						<div class="soc">
+							<svg
+								width="100%"
+								height="100%"
+								viewBox="0 0 48 48"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<g clip-path="url(#clip0_17_34)">
+									<path
+										d="M24 48C37.2548 48 48 37.2548 48 24C48 10.7452 37.2548 0 24 0C10.7452 0 0 10.7452 0 24C0 37.2548 10.7452 48 24 48Z"
+										fill="white"
+									/>
+									<path
+										d="M24 0C10.7457 0 0 10.7457 0 24C0 34.1728 6.32099 42.8642 15.2494 46.3605C15.0321 44.4642 14.8543 41.5407 15.3284 39.4667C15.763 37.5901 18.1333 27.5358 18.1333 27.5358C18.1333 27.5358 17.4222 26.0938 17.4222 23.9802C17.4222 20.642 19.358 18.1531 21.7679 18.1531C23.8222 18.1531 24.8099 19.6938 24.8099 21.5309C24.8099 23.5852 23.5062 26.6667 22.8148 29.5309C22.242 31.921 24.0198 33.8765 26.3704 33.8765C30.637 33.8765 33.916 29.3728 33.916 22.8938C33.916 17.1457 29.7877 13.1358 23.8815 13.1358C17.0469 13.1358 13.037 18.2519 13.037 23.5457C13.037 25.6 13.8272 27.8123 14.8148 29.0173C15.0123 29.2543 15.0321 29.4716 14.9728 29.7086C14.7951 30.4593 14.3802 32.0988 14.3012 32.4346C14.2025 32.8691 13.9457 32.9679 13.4914 32.7506C10.4889 31.3481 8.61235 26.9827 8.61235 23.4469C8.61235 15.8815 14.1037 8.9284 24.4741 8.9284C32.7901 8.9284 39.2691 14.8543 39.2691 22.7951C39.2691 31.0716 34.0543 37.7284 26.8247 37.7284C24.3951 37.7284 22.1037 36.4642 21.3333 34.963C21.3333 34.963 20.1284 39.5457 19.8321 40.6716C19.2988 42.7654 17.837 45.3728 16.8494 46.9728C19.1012 47.6642 21.4716 48.0395 23.9605 48.0395C37.2148 48.0395 47.9605 37.2938 47.9605 24.0395C48 10.7457 37.2543 0 24 0Z"
+										fill="#E60019"
+									/>
+								</g>
+								<defs>
+									<clipPath id="clip0_17_34">
+										<rect width="48" height="48" fill="white" />
+									</clipPath>
+								</defs>
+							</svg>
+						</div>
+						<div class="soc">
+							<svg
+								width="100%"
+								height="100%"
+								viewBox="0 0 48 48"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<g clip-path="url(#clip0_17_203)">
+									<path
+										d="M16.0001 48C20.4162 48 24.0002 44.4159 24.0002 39.9999V31.9999H16.0001C11.5841 31.9999 8 35.5839 8 39.9999C8 44.4159 11.5841 48 16.0001 48Z"
+										fill="#0ACF83"
+									/>
+									<path
+										d="M8 24C8 19.584 11.5841 15.9999 16.0001 15.9999H24.0002V31.9998H16.0001C11.5841 32 8 28.416 8 24Z"
+										fill="#A259FF"
+									/>
+									<path
+										d="M8 8.00006C8 3.58406 11.5841 0 16.0001 0H24.0002V15.9999H16.0001C11.5841 15.9999 8 12.4161 8 8.00006Z"
+										fill="#F24E1E"
+									/>
+									<path
+										d="M23.9998 0H31.9999C36.4159 0 40 3.58406 40 8.00006C40 12.4161 36.4159 15.9999 31.9999 15.9999H23.9998V0Z"
+										fill="#FF7262"
+									/>
+									<path
+										d="M40 24C40 28.416 36.4159 32 31.9999 32C27.5838 32 23.9998 28.416 23.9998 24C23.9998 19.584 27.5838 15.9999 31.9999 15.9999C36.4159 15.9999 40 19.584 40 24Z"
+										fill="#1ABCFE"
+									/>
+								</g>
+								<defs>
+									<clipPath id="clip0_17_203">
+										<rect width="48" height="48" fill="white" />
+									</clipPath>
+								</defs>
+							</svg>
+						</div>
 					</div>
 				</div>
 			</div>
