modified:   HTML/TestLearn/index.html 	modified:   HTML/TestLearn/script.js

--- a/HTML/TestLearn/index.html
+++ b/HTML/TestLearn/index.html
@@ -21,35 +21,31 @@
 			<input
 				id="check1"
 				class="answerCheck"
-				type="checkbox"
+				type="radio"
 				value=""
-				name="mailId"
 			/>
-			<label for check1>Text1</label>
+			<label class="answerLab" for check1>Text1</label>
 			<input
 				id="check2"
 				class="answerCheck"
-				type="checkbox"
+				type="radio"
 				value=""
-				name="mailId"
 			/>
-			<label for check3>Text2</label>
+			<label class="answerLab" for check2>Text2</label>
 			<input
 				id="check3"
 				class="answerCheck"
-				type="checkbox"
+				type="radio"
 				value=""
-				name="mailId"
 			/>
-			<label for check2>Text3</label>
+			<label class="answerLab" for check3>Text3</label>
 			<input
 				id="check4"
 				class="answerCheck"
-				type="checkbox"
+				type="radio"
 				value=""
-				name="mailId"
 			/>
-			<label for check4>Text4</label>
+			<label class="answerLab" for check4>Text4</label>
 			<button id="buttontest" type="submit">Submit form</button>
 		</div>
 
