--- a/HTML/TestLearn/index.html
+++ b/HTML/TestLearn/index.html
@@ -1,55 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
 
-		<style>
-			#question {
-				width: 80%;
-				height: 400px;
-				background-color: grey;
-				font-size: 24px;
-				padding: 5%;
-			}
-		</style>
-	</head>
-	<body>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Document</title>
+
+	<style>
+		#container {
+			display: flex;
+			align-items: center;
+			flex-direction: column;
+			width: 100%;
+			height: 100%;
+		}
+
+		#question {
+			width: 70%;
+			font-size: 24px;
+			padding: 5%;
+			border-radius: 25px;
+			border: 3px solid grey;
+			margin-bottom: 1.5%;
+		}
+
+		#buttontest {
+			width: 25%;
+			height: 7.5vh;
+			margin-left: 5%;
+			background-color: red;
+			color: white;
+			border: none;
+			border-radius: 10px;
+			margin-top: 0.5%;
+		}
+
+		#completed {
+			font-size: 20px;
+			width: 75%;
+			text-align: center;
+			margin-bottom: 2.5%;
+		}
+	</style>
+</head>
+
+<body>
+	<div id="container">
 		<div id="completed"></div>
 		<div id="question"></div>
-		<div>
-			<input
-				id="check1"
-				class="answerCheck"
-				type="radio"
-				value=""
-			/>
-			<label class="answerLab" for check1>Text1</label>
-			<input
-				id="check2"
-				class="answerCheck"
-				type="radio"
-				value=""
-			/>
-			<label class="answerLab" for check2>Text2</label>
-			<input
-				id="check3"
-				class="answerCheck"
-				type="radio"
-				value=""
-			/>
-			<label class="answerLab" for check3>Text3</label>
-			<input
-				id="check4"
-				class="answerCheck"
-				type="radio"
-				value=""
-			/>
-			<label class="answerLab" for check4>Text4</label>
-			<button id="buttontest" type="submit">Submit form</button>
+		<div style="display: flex;
+		flex-direction: column;
+		width: 70%;
+		margin-top: 0.5%;
+		gap: 0.5% ;">
+			<div style="display: flex; flex-direction: row; width: 90%;">
+				<input id="check1" class="answerCheck" type="radio" />
+				<label class="answerLab" for check1>Text1</label>
+			</div>
+			<div style="display: flex; flex-direction: row; width: 90%;">
+				<input id="check2" class="answerCheck" type="radio" />
+				<label class="answerLab" for check2>Text1</label>
+			</div>
+			<div style="display: flex; flex-direction: row; width: 90%;">
+				<input id="check3" class="answerCheck" type="radio" />
+				<label class="answerLab" for check3>Text1</label>
+			</div>
+			<div style="display: flex; flex-direction: row; width: 90%;">
+				<input id="check4" class="answerCheck" type="radio" />
+				<label class="answerLab" for check4>Text1</label>
+			</div>
 		</div>
 
-		<script src="script.js"></script>
-	</body>
+
+		<button id="buttontest" type="submit">Ответить</button>
+	</div>
+
+
+	<script src="script.js"></script>
+</body>
+
 </html>
