modified:   .hintrc 	modified:   HTML/TestLearn/index.html

--- a/HTML/TestLearn/index.html
+++ b/HTML/TestLearn/index.html
@@ -52,21 +52,21 @@
 		flex-direction: column;
 		width: 70%;
 		margin-top: 0.5%;
-		gap: 0.5% ;">
-			<div style="display: flex; flex-direction: row; width: 90%;">
-				<input id="check1" class="answerCheck" type="radio" />
+		gap: 1vh ;">
+			<div style="display: flex; flex-direction: row; width: 90%; gap: 1%;">
+				<input id="check1" class="answerCheck" type="radio" style="scale: 1.5;"/>
 				<label class="answerLab" for check1>Text1</label>
 			</div>
-			<div style="display: flex; flex-direction: row; width: 90%;">
-				<input id="check2" class="answerCheck" type="radio" />
+			<div style="display: flex; flex-direction: row; width: 90%; gap: 1%;">
+				<input id="check2" class="answerCheck" type="radio" style="scale: 1.5;" />
 				<label class="answerLab" for check2>Text1</label>
 			</div>
-			<div style="display: flex; flex-direction: row; width: 90%;">
-				<input id="check3" class="answerCheck" type="radio" />
+			<div style="display: flex; flex-direction: row; width: 90%; gap: 1%;">
+				<input id="check3" class="answerCheck" type="radio" style="scale: 1.5;" />
 				<label class="answerLab" for check3>Text1</label>
 			</div>
-			<div style="display: flex; flex-direction: row; width: 90%;">
-				<input id="check4" class="answerCheck" type="radio" />
+			<div style="display: flex; flex-direction: row; width: 90%; gap: 1%;">
+				<input id="check4" class="answerCheck" type="radio" style="scale: 1.5;" />
 				<label class="answerLab" for check4>Text1</label>
 			</div>
 		</div>
