modified:   HTML/TestCodes/Crossword/index.html 	modified:   HTML/TestCodes/Crossword/script.js

--- a/HTML/TestCodes/Crossword/index.html
+++ b/HTML/TestCodes/Crossword/index.html
@@ -13,11 +13,8 @@
 </head>
 <body>
     <div class="container">
-        <div id="wordclass">
-            <p>1</p>
-            <p>1</p>
-            <p>1</p>
-        </div>
+        <div class="wordclass"></div>
+        <div class="wordclass"></div>
     </div>
 
     <script src="script.js"></script>
