--- a/HTML/TestCodes/Crossword/index.html
+++ b/HTML/TestCodes/Crossword/index.html
@@ -1,22 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        #wordclass{
-            display: flex;
-            flex-direction: row;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <div class="wordclass"></div>
-        <div class="wordclass"></div>
-    </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<style>
+            .container{
+                display: flex;
+                flex-direction: row;
+                gap: 5px;
+            }
+			.wordsymbol {
+				display: flex;
+				flex-direction: row;
+				justify-content: center;
+				align-items: center;
+				margin-top: 5px;
+				width: 100px;
+				height: 100px;
+				background-color: aqua;
+			}
+			.wordsymbol-input {
+				position: absolute;
+				width: 80px;
+				height: 80px;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="container">
+			<div class="wordclass1">
+				<div class="wordsymbol"></div>
+				<div class="wordsymbol"></div>
+				<div class="wordsymbol"></div>
+			</div>
+			<div class="wordclass2">
+				<div class="wordsymbol"></div>
+				<div class="wordsymbol"></div>
+			</div>
+		</div>
 
-    <script src="script.js"></script>
-</body>
+		<button id="buttontest" type="submit">Ответить</button>
+
+		<script src="script.js"></script>
+	</body>
 </html>
