modified:   ChatGPT/HTMX/index.html

--- a/ChatGPT/HTMX/index.html
+++ b/ChatGPT/HTMX/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="#" hx-get="index.html" hx-target="main">Главная</a>
+        <a href="#" hx-get="index.html" hx-select="main" hx-target="main">Главная</a>
         <a href="#" hx-get="about.html" hx-target="main">О нас</a>
         <a href="#" hx-get="contact.html" hx-select=".container" hx-target="main">Контакты</a>
     </nav>
