modified:   flipCityPointer/HTML/index.html 	modified:   flipCityPointer/JS/index.js

--- a/flipCityPointer/HTML/index.html
+++ b/flipCityPointer/HTML/index.html
@@ -10,23 +10,8 @@
         <div class="input_frame">
             <input type="text" name="city_input" placeholder="Название города">
         </div>
-        <div class="city-pointer-main">
-            <div class="city-pointer-part"></div>
-            <div class="city-pointer-part"></div>
-            <div class="city-pointer-part"></div>
-            <div class="city-pointer-part"></div>
-            <div class="city-pointer-part"></div>
-            <div class="city-pointer-part"></div>
-            <div class="city-pointer-part"></div>
-            <div class="city-pointer-part"></div>
-            <div class="city-pointer-part"></div>
-            <div class="city-pointer-part"></div>
-            <div class="city-pointer-part"></div>
-            <div class="city-pointer-part"></div>
-            <div class="city-pointer-part"></div>
-            <div class="city-pointer-part"></div>
-            <div class="city-pointer-part"></div>
-        </div>
+        <div id="city-pointer-main"></div>
     </div>
+    <script src="../JS/index.js"></script>
 </body>
 </html>
