--- a/flipCityPointer/HTML/index.html
+++ b/flipCityPointer/HTML/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <div class="input_frame">
-            <input type="text" id="city_input" placeholder="Название города">
+            <input type="text" id="city-input" placeholder="Название города">
         </div>
         <div id="city-pointer-main"></div>
     </div>
