Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch main
 Your branch is up to date with 'origin/main'.

 Changes to be committed:
	new file:   Preprocessor_Page/assets/9lbhm4k1ouy51.webp
	new file:   Preprocessor_Page/assets/IMG_20241204_015346_304.png
	new file:   Preprocessor_Page/assets/image.png
	new file:   Preprocessor_Page/assets/image1.png
	new file:   Preprocessor_Page/assets/screenshot_00050.png
	modified:   Preprocessor_Page/index.html
	modified:   Preprocessor_Page/login.html
	new file:   Preprocessor_Page/register.css
	new file:   Preprocessor_Page/register.css.map
	modified:   Preprocessor_Page/register.html
	new file:   Preprocessor_Page/register.scss
	new file:   Preprocessor_Page/register_script.js
	modified:   Preprocessor_Page/style.css
	modified:   Preprocessor_Page/style.css.map
	modified:   Preprocessor_Page/style.scss

--- a/Preprocessor_Page/login.html
+++ b/Preprocessor_Page/login.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preprocessor Page Login</title>
+    <link href="register.css" rel="stylesheet">
 </head>
 <body>
         <main>
             <article class="reg-form-main">
+                <h1>Login</h1>
                 <div class="reg-form-email">
-                    <input class="reg-form-input" type="email" placeholder="Enter email">
+                    <input class="reg-form-input" type="email" placeholder="  Enter email">
                 </div>
                 <div class="reg-form-password">
-                    <input class="reg-form-input" type="password" placeholder="Password">
+                    <input class="reg-form-input" type="password" placeholder="  Password">
                 </div>
                 <a class="reg-form-info" href="register.html">No account yet</a>
                 <div class="reg-form-button">
@@ -21,5 +23,6 @@
                 </div>
             </article>
         </main>
+        <script src="register_script.js"></script>
 </body>
 </html>
