--- a/Preprocessor_Page/index.html
+++ b/Preprocessor_Page/index.html
@@ -9,12 +9,7 @@
 </head>
 <body>
         <header>
-            <div class="header-logo-main">
-                <img id="header-logo" src="" alt="">
-            </div>
-            <div class="header-img-main">
-                <img id="header-img" src="" alt="">
-            </div>
+            <div id="header-img-main"></div>
             <nav id="header-nav">
                 <a class="header-nav-button" id="header-nav-home" href="index.html">
                     Home
@@ -41,56 +36,63 @@
                 <h2>Gallery</h2>
                 <div class="home-gallery-main">
                     <div class="home-gallery-part">
-                        <img src="" alt=""> 
+                        <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%"> 
                     </div>
                     <div class="home-gallery-part">
-                        <img src="" alt="">
+                        <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
                     </div>
                     <div class="home-gallery-part">
-                        <img src="" alt="">
+                        <img src="./assets/9lbhm4k1ouy51.webp" alt="" width="100%">
                     </div>
                 </div>
             </article>
             <section id="home-text">
                 <h2>A little about who we are and what we do</h2>
                 <h3>Who are we</h3>
-                <p></p>
+                <p style="padding: 1%;">Моды для игры BeamNG Drive - это дополнительные файлы, которые позволяют расширить функционал и улучшить графику игры. Они созданы сообществом игроков и разработчиков и представляют собой различные модификации, добавляющие новые автомобили, карты, физику, звуки и другие элементы игрового процесса.
+
+                    С помощью модов можно создавать уникальные сценарии и экспериментировать с различными настройками, что делает игру еще более увлекательной и разнообразной. Кроме того, моды позволяют вносить изменения в уже существующие автомобили и карты, делая их более реалистичными и интересными.</p>
                 <h3>What do we do</h3>
-                <p></p>
+                <p style="padding: 1%;">Моды для игры BeamNG Drive - это дополнительные файлы, которые позволяют расширить функционал и улучшить графику игры. Они созданы сообществом игроков и разработчиков и представляют собой различные модификации, добавляющие новые автомобили, карты, физику, звуки и другие элементы игрового процесса.
+
+                    С помощью модов можно создавать уникальные сценарии и экспериментировать с различными настройками, что делает игру еще более увлекательной и разнообразной. Кроме того, моды позволяют вносить изменения в уже существующие автомобили и карты, делая их более реалистичными и интересными.</p>
             </section>
             <article id="home-mods">
                 <h2>Community mods</h2>
+                <p style="padding: 1%;">Моды для игры BeamNG Drive - это дополнительные файлы, которые позволяют расширить функционал и улучшить графику игры. Они созданы сообществом игроков и разработчиков и представляют собой различные модификации, добавляющие новые автомобили, карты, физику, звуки и другие элементы игрового процесса.
+
+                    С помощью модов можно создавать уникальные сценарии и экспериментировать с различными настройками, что делает игру еще более увлекательной и разнообразной. Кроме того, моды позволяют вносить изменения в уже существующие автомобили и карты, делая их более реалистичными и интересными.</p>
                 <div class="home-mods-main">
                     <div class="home-mods-part">
                         <div class="home-mods-part-text">
-
+                            <p style="padding: 2.5%;">Моды для игры BeamNG Drive - это дополнительные файлы, которые позволяют расширить функционал и улучшить графику игры. Они созданы сообществом игроков и разработчиков и представляют собой различные модификации, добавляющие новые автомобили, карты, физику, звуки и другие элементы игрового процесса. С помощью модов можно создавать уникальные сценарии и экспериментировать с различными настройками, что делает игру еще более увлекательной и разнообразной. Кроме того, моды позволяют вносить изменения в уже существующие автомобили и карты, делая их более реалистичными и интересными.</p>
                         </div>
                         <div class="home-mods-part-img">
-                            <img src="" alt="">
+                            <img src="./assets/image.png" alt="" width="100%">
                         </div>
                     </div>
                     <div class="home-mods-part">
                         <div class="home-mods-part-text">
-
+                            <p style="padding: 2.5%;">Моды для игры BeamNG Drive - это дополнительные файлы, которые позволяют расширить функционал и улучшить графику игры. Они созданы сообществом игроков и разработчиков и представляют собой различные модификации, добавляющие новые автомобили, карты, физику, звуки и другие элементы игрового процесса. С помощью модов можно создавать уникальные сценарии и экспериментировать с различными настройками, что делает игру еще более увлекательной и разнообразной. Кроме того, моды позволяют вносить изменения в уже существующие автомобили и карты, делая их более реалистичными и интересными.</p>
                         </div>
                         <div class="home-mods-part-img">
-                            <img src="" alt="">
+                            <img src="./assets/image1.png" alt="" width="100%">
                         </div>
                     </div>
                     <div class="home-mods-part">
                         <div class="home-mods-part-text">
-
+                            <p style="padding: 2.5%;">Моды для игры BeamNG Drive - это дополнительные файлы, которые позволяют расширить функционал и улучшить графику игры. Они созданы сообществом игроков и разработчиков и представляют собой различные модификации, добавляющие новые автомобили, карты, физику, звуки и другие элементы игрового процесса. С помощью модов можно создавать уникальные сценарии и экспериментировать с различными настройками, что делает игру еще более увлекательной и разнообразной. Кроме того, моды позволяют вносить изменения в уже существующие автомобили и карты, делая их более реалистичными и интересными.</p>
                         </div>
                         <div class="home-mods-part-img">
-                            <img src="" alt="">
+                            <img src="./assets/image.png" alt="" width="100%">
                         </div>
                     </div>
                     <div class="home-mods-part">
                         <div class="home-mods-part-text">
-
+                            <p style="padding: 2.5%;">Моды для игры BeamNG Drive - это дополнительные файлы, которые позволяют расширить функционал и улучшить графику игры. Они созданы сообществом игроков и разработчиков и представляют собой различные модификации, добавляющие новые автомобили, карты, физику, звуки и другие элементы игрового процесса. С помощью модов можно создавать уникальные сценарии и экспериментировать с различными настройками, что делает игру еще более увлекательной и разнообразной. Кроме того, моды позволяют вносить изменения в уже существующие автомобили и карты, делая их более реалистичными и интересными.</p>
                         </div>
                         <div class="home-mods-part-img">
-                            <img src="" alt="">
+                            <img src="./assets/image1.png" alt="" width="100%">
                         </div>
                     </div>
                 </div>
@@ -130,5 +132,6 @@
                 </div>
             </nav>
         </footer>
+        <script src="script.js"></script>
 </body>
 </html>
