--- a/Preprocessor_Page/register.html
+++ b/Preprocessor_Page/register.html
@@ -4,25 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preprocessor Page Register</title>
+    <link href="register.css" rel="stylesheet">
 </head>
 <body>
         <main>
             <article class="reg-form-main">
+                <h1>Register</h1>
                 <div class="reg-form-name">
-                    <input class="reg-form-input" type="text" placeholder="Enter name"> 
+                    <input class="reg-form-input" type="text" placeholder="  Enter name"> 
                 </div>
                 <div class="reg-form-email">
-                    <input class="reg-form-input" type="email" placeholder="Enter email">
+                    <input class="reg-form-input" type="email" placeholder="  Enter email">
                 </div>
                 <div class="reg-form-password">
-                    <input class="reg-form-input" type="password" placeholder="Password">
+                    <input class="reg-form-input" type="password" placeholder="  Password">
                 </div>
                 <a class="reg-form-info" href="login.html">Already have an account</a>
                 <div class="reg-form-button">
-                    <input id="reg-form-button-main" type="button">
+                    <input class="reg-form-button-main" type="button">
                     <a class="reg-form-back-home" href="index.html">Return to home</a>
                 </div>
             </article>
         </main>
+        <script src="register_script.js"></script>
 </body>
 </html>
